--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -106,6 +106,7 @@ option {
     font-size: 20px;
     width: 100%;
     overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 .server-content {
     color: #555;
