--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -21,7 +21,6 @@ option {
 
 .bar {
     width: 100%;
-    height: 48px;
     background-color: #AAA;
     display: grid;
     grid-template-columns: 1fr min-content min-content min-content min-content;
@@ -90,9 +89,14 @@ option {
 
 /* messages */
 
+#message-input-container {
+    height: calc(100vh - 48px);
+    display: grid;
+    grid-template-rows: 1fr min-content;
+}
+
 #messages {
     width: 100%;
-    height: calc(100vh - 96px);
     padding: 4px 8px;
     display: flex;
     flex-direction: column;
@@ -105,8 +109,15 @@ option {
     padding: 8px 0px;
     font-size: 20px;
     width: 100%;
+    display: grid;
+    grid-template-columns: max-content max-content 1fr;
     overflow-wrap: break-word;
     white-space: pre-wrap;
+}
+.message > * {
+    vertical-align: top;
+    display: inline-block;
+    overflow: hidden;
 }
 .server-content {
     color: #555;
@@ -116,11 +127,17 @@ option {
     font-weight: bold;
 }
 
-
 /* input bar */
 
 #input {
     cursor: text;
+    display: inline-block;
+    min-height: 32px;
+    max-height: 96px;
+    height: max-content;
+    overflow: scroll;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 #input:focus {
     outline: none;
