--- a/src/html/themes.css
+++ b/src/html/themes.css
@@ -73,28 +73,41 @@
 
 /* Neon */
 
+@font-face {
+    font-family: 'Envy Code R';
+    font-style: normal;
+    font-weight: 400;
+    src: url("envy_code_r.ttf") format('truetype');
+}
+
 .theme-neon {
-    font-family: 'Monaco', monospace;
-    background-image: linear-gradient(#151515, #334);
+    font-family: 'Envy Code R', monospace;
+    background-color: #111;
+    color: #FFF;
 }
 .theme-neon .bar {
-    background-image: linear-gradient(#445, #557);
-    outline: 1px solid #FCA;
+    background-color: #252525;
+    outline: 2px solid #ACF;
+    box-shadow: 0px 0px 4px 4px #ACF;
 }
 
 .theme-neon .bar-tile,
 .theme-neon .exit-room {
-    background-color: #ACF;
-    border-color: #FB8;
+    border: 2px solid #FB8;
     border-radius: 4px;
-    box-shadow: 0 0 1px #FCA;
+    box-shadow: 0 0 2px #FCA;
+    background-color: #222;
+}
+.theme-neon option {
+    color: inherit;
 }
 
 .theme-neon .message {
-    color: #FFF;
+    text-shadow: 0px 0px 1.5px #AFC;
 }
 .theme-neon .server-content {
     color: #AAA;
+    text-shadow: 0px 0px 2px #ACF;
 }
 
 /* Cosmic */
