--- a/src/html/styles/styles.css
+++ b/src/html/styles/styles.css
@@ -4,7 +4,11 @@
 
 body {
     margin: 0;
+    height: 100vh;
     font-family: 'Trebuchet MS', sans-serif;
+
+    display: grid;
+    grid-template-rows: min-content 1fr;
 }
 
 button, input, select, option {
@@ -15,6 +19,51 @@ button, input, select, option {
 
 option {
     color: #000;
+}
+
+/* dialog box */
+
+#dialog-window {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1;
+    backdrop-filter: blur(1px);
+
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+#dialog-box {
+    background-color: rgba(0, 0, 0, 0.5);
+    display: grid;
+    grid-template-rows: 1fr min-content;
+    grid-template-columns: 1fr min-content;
+    height: 192px;
+    max-width: min(512px, 80vw);
+    padding: 24px;
+    border: 2px dashed #FFF;
+}
+
+#dialog-text {
+    color: #FFF;
+    font-size: 24px;
+    grid-column: 1 / 3;
+}
+
+#dialog-input {
+    background-color: #FFF;
+    margin: 0px;
+    margin-right: 8px;
+    cursor: text;
+}
+
+#dialog-close {
+    margin: 0px;
 }
 
 /* bars */
@@ -28,6 +77,7 @@ option {
 
 .bar-tile {
     display: inline-flex;
+    background-color: #AAA;
     height: 32px;
     margin: 8px;
     padding: 4px;
@@ -46,12 +96,9 @@ option {
     margin: auto;
     margin-right: 6px;
 }
-.online {
-    background-color: #6F6;
-}
-.offline {
-    background-color: #F66;
-}
+.online { background-color: #6F6; }
+.connecting { background-color: #FF6; }
+.offline { background-color: #F66; }
 
 /* rooms */
 
@@ -64,9 +111,7 @@ option {
 
 .room-name {
     display: inline-block;
-    max-width: 96px;
     overflow: hidden;
-    text-overflow: ellipsis;
 }
 .room.selected .room-name {
     text-decoration: underline;
@@ -77,22 +122,26 @@ option {
 
 .exit-room {
     border: 2px solid #000;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 20px;
     width: 20px;
-    font-size: 12px;
-    text-align: center;
+    font-size: 20px;
     user-select: none;
     margin-left: 8px;
     cursor: pointer;
+}
+.exit-room:hover {
+    background-color: rgba(255, 64, 64, 0.3);
 }
 
 /* messages */
 
 #message-input-container {
-    height: calc(100vh - 48px);
     display: grid;
     grid-template-rows: 1fr min-content;
+    overflow: auto;
 }
 
 #messages {
@@ -110,7 +159,7 @@ option {
     font-size: 20px;
     width: 100%;
     display: grid;
-    grid-template-columns: max-content max-content 1fr;
+    grid-template-columns: auto 1fr;
     overflow-wrap: break-word;
     white-space: pre-wrap;
 }
@@ -119,12 +168,16 @@ option {
     display: inline-block;
     overflow: hidden;
 }
-.server-content {
+
+.bold          {font-weight: bold;}
+.italic        {font-style: italic;}
+.underline     {text-decoration: underline;}
+.strikethrough {text-decoration: line-through;}
+.code          {font-family: monospace;}
+.underline.strikethrough {text-decoration: underline line-through;}
+.server {
     color: #555;
     font-style: italic;
-}
-.sender {
-    font-weight: bold;
 }
 
 /* input bar */
