--- a/src/html/styles/styles.css
+++ b/src/html/styles/styles.css
@@ -18,7 +18,7 @@ button, input, select, option {
 }
 
 option {
-    color: #000;
+    color: inherit;
 }
 
 /* dialog box */
@@ -39,30 +39,39 @@ option {
 }
 
 #dialog-box {
-    background-color: rgba(0, 0, 0, 0.5);
     display: grid;
     grid-template-rows: 1fr min-content;
     grid-template-columns: 1fr min-content;
     height: 192px;
+    width: auto;
     max-width: min(512px, 80vw);
     padding: 24px;
-    border: 2px dashed #FFF;
+    border-style: dashed;
+}
+#dialog-box .bar-tile {
+    background-color: #FFF;
 }
 
 #dialog-text {
-    color: #FFF;
     font-size: 24px;
     grid-column: 1 / 3;
 }
 
 #dialog-input {
-    background-color: #FFF;
     margin: 0px;
     margin-right: 8px;
     cursor: text;
 }
 
-#dialog-close {
+#dialog-cancel {
+    height: 32px;
+    width: 32px;
+    font-size: 24px;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+}
+#dialog-close, #dialog-cancel {
     margin: 0px;
 }
 
@@ -77,7 +86,7 @@ option {
 
 .bar-tile {
     display: inline-flex;
-    background-color: transparent;
+    background-color: inherit;
     height: 32px;
     margin: 8px;
     padding: 4px;
